# Paper

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  artifact_roles.py  auth.py  config.py  db.py  deps.py  jobs.py  main.py  models.py  queue.py
backend/app/api/routes/: auth.py  health.py  jobs.py  projects.py  workspace.py
backend/app/schemas/: project.py
backend/app/services/: __init__.py  artifact_chunks.py  drafting.py  exporting.py  figures.py  grounding.py  llm.py  manuscript_context.py  normalization.py  paperbanana_adapter.py  pipeline_runner.py  planning.py  quality.py  retrieval.py  storage.py
backend/paper_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_app_smoke.py  test_auth_api.py  test_db_init.py  test_exporting.py  test_figures.py  test_health_api.py  test_jobs_api.py  test_llm_usage_tracking.py  test_models.py  test_normalization.py  test_pipeline_api.py  test_projects_api.py  test_quality.py  test_retrieval.py  test_role_aware_manuscript.py
docs/plans/: 2026-03-24-paper-authoring-design.md  2026-03-24-paper-authoring.md  2026-03-25-paper-async-jobs-design.md  2026-03-25-paper-async-jobs.md  2026-03-25-paper-figure-handoff-design.md  2026-03-25-paper-figure-handoff.md  2026-03-25-paper-help-guide-design.md  2026-03-25-paper-help-guide.md  2026-03-25-paper-job-feedback-design.md  2026-03-25-paper-job-feedback.md  2026-03-25-paper-kbf-integration-design.md  2026-03-25-paper-kbf-integration.md  2026-03-25-paper-portal-open-access-design.md  2026-03-25-paper-portal-open-access.md  2026-03-25-paper-quality-run-all-design.md  2026-03-25-paper-quality-run-all.md  2026-03-25-paper-role-aware-intake-design.md  (+1 more)
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  (+3 more)
(+26 files in other folders)
