[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-backend"
version = "0.1.0"
description = "Backend for the KBF paper authoring system"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "aiofiles>=24.1.0",
  "anthropic>=0.49.0",
  "fastapi>=0.115.0",
  "google-auth>=2.40.0",
  "google-genai>=1.11.0",
  "huggingface_hub>=0.30.0",
  "httpx>=0.28.0",
  "json_repair>=0.39.0",
  "matplotlib>=3.10.0",
  "numpy>=2.2.0",
  "openai>=1.68.0",
  "pillow>=11.1.0",
  "pydantic>=2.10.0",
  "psycopg[binary]>=3.2.0",
  "python-docx>=1.1.2",
  "python-dotenv>=1.0.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.20",
  "pyyaml>=6.0.2",
  "redis>=5.2.0",
  "requests>=2.32.0",
  "rq>=1.16.2",
  "sqlalchemy>=2.0.36",
  "tqdm>=4.67.1",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
